<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="364dp"
        android:layout_height="196dp"

        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="cursive"
        android:shadowColor="@android:color/darker_gray"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="15"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#673680"
        android:textSize="50sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleGray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button">

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:text="@string/signin"
                android:textAllCaps="false"
                android:textColor="#FCEDFC"
                android:textSize="16dp"
                android:textStyle="bold" />

        </com.balysv.materialripple.MaterialRippleLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleGray"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/button">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:baselineAligned="false"
                android:text="@string/signup"
                android:textAllCaps="false"
                android:textColor="#FCEDFC"
                android:textSize="16dp"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>