<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".login_tasks.SigninActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="#673680" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#673680" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:shadowColor="@android:color/darker_gray"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="15"
            android:text="@string/signin"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/textOnSignin"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleGray2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/facebookButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#385C8E"
                        android:drawableLeft="@drawable/ic_facebook"
                        android:drawableTint="@android:color/white"
                        android:paddingLeft="10dp"
                        android:text="FaceBook"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp">

                <com.balysv.materialripple.MaterialRippleLayout
                    style="@style/RippleGray2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/twitterButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#26A6D1"
                        android:drawableLeft="@drawable/ic_twitter"
                        android:paddingLeft="10dp"
                        android:text="Twitter"
                        android:textColor="@android:color/white"

                        android:textStyle="bold" />
                </com.balysv.materialripple.MaterialRippleLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:padding="20dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E4E2E6"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/edit_text_email_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"

                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableTint="#673680"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textColor="#673680"
                    android:textColorHint="#673680" />


                <EditText
                    android:id="@+id/edit_text_password_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="10dp"

                    android:drawableLeft="@drawable/ic_password"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:drawableTint="#673680"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="5dp"
                    android:textColor="#673680"
                    android:textColorHint="#673680" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:padding="5dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">

                    <com.balysv.materialripple.MaterialRippleLayout
                        style="@style/RippleGray"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/button_signIn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button"
                            android:text="@string/register"
                            android:textAllCaps="false"
                            android:textColor="@color/buttonTextColor"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </com.balysv.materialripple.MaterialRippleLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView

            android:id="@+id/txtSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:padding="@dimen/default_padding"
            android:text="@string/signUp"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>